# open_deep_research_pydantic_ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  fix_agents.py  pyproject.toml  quick_test_results.json  research_report.md  test_clarification_direct.py  test_cli_modes.py  test_factory_direct.py  test_factory_standalone.py  test_minimal.py  test_simple_clarification.py
docs/: API_REFERENCE.md  blog_article.md  cache-system-bug-fixes.md  caching_and_memory_management.md  circuit_breaker_implementation.md  clarification_agent_evaluation_improvement_plan.md  clarification_improvement_plan.md  clarification_structured_choices_implementation_plan.md  clarification_system_redesign.md  cli_dual_mode.md  cli_http_mode_clarification_plan.md  data_flow_guide.md  embedding_quality_improvement_plan.md  enhanced_prompt_engineering_guide.md  eval_synthesis_features_plan.md  evaluation_report_multi_question.md  event_bus_and_agent_communication.md  fan-out.md  four_agent_architecture_implementation.md  hallucination_safeguards_plan.md  http_mode_api_alignment_plan.md  http_mode_complete_implementation_plan.md  implementation_comparison.md  implementation_design.md  implementation_plan_completion.md  individual_agent_architecture_migration_plan.md  parallel_execution_implementation_plan.md  pattern-analysis-cache-fix-plan.md  phase1_implementation_guide.md  phase2_implementation_complete.md  phase2_implementation_summary.md  phase2_robustness_implementation_guide.md  phase4_clean_merge_implementation_plan.md  product.md  prompt_enhancement_summary.md  pyright_type_fixes_implementation_plan.md  remaining_implementation_phases.md  report_generator_upstream_outline_plan.md  research_executor_consolidated_plan.md  research_executor_hybrid_implementation_plan.md  (+15 more)
examples/: CLARIFICATION_PROGRESS_DESIGN.md  IMPLEMENTATION_SUMMARY.md  demo_review_interface.py  query_transformation_demo.py  test_clarification_progress.py  test_clarification_progress_auto.py
src/: __init__.py  cli.py  dependencies.py
src/agents/: __init__.py  base.py  base_old.py  brief_generator.py  clarification.py  compression.py  factory.py  headline_tokens.py  query_transformation.py  report_clean_merge.py  report_generator.py  research_executor.py  research_executor_tools.py  research_outline.py
src/api/: error_handlers.py  main.py  sse_handler.py  task_manager.py
src/cli/: __init__.py  app.py  clarification_http.py  http_client.py  report_io.py  runner.py  stream.py  util.py
src/core/: __init__.py  agents.py  bootstrap.py  circuit_breaker.py  config.py  context.py  events.py  exceptions.py  logging.py  sse_models.py  workflow.py  workflow_with_circuit_breaker.py
src/interfaces/: __init__.py  clarification_flow.py  clarification_progress.py  cli_multi_clarification.py  enhanced_progress.py  interactive_selector.py  progress_context.py  review_interface.py  stage_descriptions.py  terminal_progress.py  time_estimator.py
src/models/: __init__.py  api_models.py  brief_generator.py  clarification.py  compression.py  core.py  metadata.py  priority.py  query_transformation.py  report_generator.py  research.py  research_executor.py  research_plan_models.py  search_query_models.py
src/open_deep_research_with_pydantic_ai/: __init__.py  cli.py  dependencies.py
src/services/: cache_manager.py  confidence_analyzer.py  contradiction_detector.py  dedup.py  embeddings.py  metrics_collector.py  optimization_manager.py  parallel_executor.py  pattern_recognizer.py  quality_monitor.py  search.py  search_orchestrator.py  source_repository.py  source_validation.py  synthesis_engine.py  synthesis_tools.py
src/utils/: __init__.py  async_utils.py  cache_serialization.py  clarification_utils.py  serialization.py  validation.py
tests/: README.md  TESTING_STRATEGY.md  conftest.py  run_quick_test.py  run_tests.py  test_agents.py  test_basic.py  test_bootstrap.py  test_clarification_models.py  test_clarification_phase1.py  test_cli_http_mode.py  test_concurrent_users.py  test_helpers.py  test_integration_summary.py  test_logging.py  test_new_agents.py  test_performance_validation.py  test_pydantic_ai_integration.py  test_query_transformation.py  test_system_improvements.py  test_three_phase_integration.py  test_workflow_integration.py
tests/acceptance/: __init__.py  test_final_validation.py
tests/api/: conftest.py  sse_test_utils.py  test_api_integration.py  test_api_models.py  test_http_clarification_callback.py  test_http_phase4_integration.py  test_http_sse_endpoint.py  test_main_endpoints.py  test_sse_streaming.py  test_task_manager.py  test_workflow_integration.py
tests/evals/: README.md  README_EVAL_FRAMEWORK.md  README_MULTI_JUDGE.md  __init__.py  base_multi_judge.py  clarification_dataset.yaml  clarification_evals.py  clarification_multi_judge_adapter.py  demo_regression_tracking.py  domain_specific_evals.py  evaluation_runner.py  multi_judge_evaluation.py  query_transformation_enhanced_evals.py  query_transformation_evals.py  query_transformation_multi_judge_adapter.py  regression_tracker.py  regression_tracker_fixed.py  research_executor_evals.py  research_executor_multi_judge_adapter.py  run_clarification_eval.py  run_multi_judge_demo.py  run_query_transformation_eval.py  run_research_executor_eval.py  test_dataset_loading.py  test_eval_framework.py  test_eval_framework_integration.py  test_eval_quick.py  test_framework_quick.py  test_multi_judge_framework.py  test_research_executor_eval_quick.py  test_single_case.py  test_yaml_dataset.py
tests/integration/: test_agent_pipeline.py  test_clarification_integration.py  test_clarification_real.py  test_clarification_workflows.py  test_multi_clarification.py  test_phase2_integration.py  test_phase3_integration.py  test_query_transformation_workflows.py  test_research_executor_complete.py  test_research_executor_integration.py
tests/resilience/: test_error_scenarios.py
tests/unit/: test_agent_factory.py  test_circuit_breaker.py  test_clean_merge_phase_a.py  test_clean_merge_phase_b.py  test_clean_merge_phase_c.py  test_metrics_collector.py  (+13 more)
(+61 files in other folders)
